# libhyscanmath

./: .gitignore  CMakeLists.txt  Makefile  readme.md
hyscanmath/: CMakeLists.txt  hyscan-ahrs-mahony.c  hyscan-ahrs-mahony.h  hyscan-ahrs.c  hyscan-ahrs.h  hyscan-beamforming.c  hyscan-beamforming.h  hyscan-convolution.c  hyscan-convolution.h  hyscan-echo-svp.c  hyscan-echo-svp.h  hyscan-fft.c  hyscan-fft.h  hyscan-inter2-doa.c  hyscan-inter2-doa.h  hyscan-math-exports.h  hyscan-math-functions.c  hyscan-math-functions.h  hyscan-math.h  hyscan-signal.c  hyscan-signal.h  hyscan-stats.c  hyscan-stats.h  hyscanmath.pc.in  pffft.c
tests/: CMakeLists.txt  ahrs-test.c  beamforming-test.c  convolution-test.c  fft-test.c  imu-test.c
